a new implementation of expression parser