@@ -60,9 +60,9 @@
                             <version>${dagger.version}</version>
                         </path>
                     </annotationProcessorPaths>
-                    <source>19</source>
-                    <target>19</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>21</source>
+                    <target>21</target>
+<!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -269,7 +269,7 @@
         <dependency>
             <groupId>io.reactivex.rxjava2</groupId>
             <artifactId>rxjavafx</artifactId>
-            <version>2.11.0-RC36</version>
+            <version>2.2.2</version>
         </dependency>
         <dependency>
             <groupId>io.github.java-diff-utils</groupId>
